kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utb-devops-demo
  labels:
    app: utb-devops-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: utb-devops-demo
  template:
    metadata:
      labels:
        app: utb-devops-demo
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: utb-devops-demo
          image: docker.io/nelsflde/utb-devops-demo:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: tmp-volume
          emptyDir: {}
