kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utb-devops-demo
spec:
  selector:
    app: utb-devops-demo
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
